--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,57 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kastro's Spotify App</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <img src="images/spotify-logo.png" alt="Spotify Logo">
+            <img src="/images/spotify-logo.png" alt="Spotify Logo">
             <h1>This is Kastro's App</h1>
         </header>
         
         <section class="categories">
             <h2>Select a Category</h2>
             <div class="category">
-                <img src="images/bangaru-kodi-petta-poster.jpg" alt="Telugu Song">
+                <img src="/images/bangaru-kodi-petta-poster.jpg" alt="Telugu Song">
                 <p>Bangaru Kodi Petta - Gharan Mogudu</p>
                 <audio controls>
-                    <source src="songs/bangaru-kodi-petta.mp3" type="audio/mpeg">
+                    <source src="/songs/bangaru-kodi-petta.mp3" type="audio/mpeg">
                 </audio>
             </div>
             <div class="category">
-                <img src="images/tiger-ka-hukum-poster.jpg" alt="Tamil Song">
+                <img src="/images/tiger-ka-hukum-poster.jpg" alt="Tamil Song">
                 <p>Tiger Ka Hukum - Jailer</p>
                 <audio controls>
-                    <source src="songs/tiger-ka-hukum.mp3" type="audio/mpeg">
+                    <source src="/songs/tiger-ka-hukum.mp3" type="audio/mpeg">
                 </audio>
             </div>
             <div class="category">
-                <img src="images/yethukari-raavilum-poster.jpg" alt="Malayalam Song">
+                <img src="/images/yethukari-raavilum-poster.jpg" alt="Malayalam Song">
                 <p>Yethukari Raavilum - Bangalore Days</p>
                 <audio controls>
-                    <source src="songs/yethukari-raavilum.mp3" type="audio/mpeg">
+                    <source src="/songs/yethukari-raavilum.mp3" type="audio/mpeg">
                 </audio>
             </div>
             <div class="category">
-                <img src="images/salaam-rocky-bhai-poster.jpg" alt="Kannada Song">
+                <img src="/images/salaam-rocky-bhai-poster.jpg" alt="Kannada Song">
                 <p>Salaam Rocky Bhai - KGF</p>
                 <audio controls>
-                    <source src="songs/salaam-rocky-bhai.mp3" type="audio/mpeg">
+                    <source src="/songs/salaam-rocky-bhai.mp3" type="audio/mpeg">
                 </audio>
             </div>
             <div class="category">
-                <img src="images/yeh-raate-yeh-mausam-poster.jpg" alt="Hindi Song">
+                <img src="/images/yeh-raate-yeh-mausam-poster.jpg" alt="Hindi Song">
                 <p>Yeh Raate Yeh Mausam - Sanam</p>
                 <audio controls>
-                    <source src="songs/yeh-raate-yeh-mausam.mp3" type="audio/mpeg">
+                    <source src="/songs/yeh-raate-yeh-mausam.mp3" type="audio/mpeg">
                 </audio>
             </div>
         </section>
 
         <footer>
             <div class="profile-pic">
-                <img src="images/profile-picture.jpg" alt="Profile Picture">
+                <img src="/images/profile-picture.jpg" alt="Profile Picture">
             </div>
             <div class="youtube-links">
                 <a href="https://www.youtube.com/playlist?list=PLs-PsDpuAuTeNx3OgGQ1QrpNBo-XE6VBh" target="_blank">Docker Course</a>
@@ -62,6 +62,6 @@
             </div>
         </footer>
     </div>
-    <script src="js/app.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 </html>
