--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,9 +37,15 @@
         </div>
 
         <div class="links">
-            <a href="https://www.youtube.com/playlist?list=PLs-PsDpuAuTeNx3OgGQ1QrpNBo-XE6VBh" target="_blank">Docker by Kastro</a>
-            <a href="https://www.youtube.com/watch?v=opJAfDOCZuI" target="_blank">Nexus by Kastro</a>
-            <a href="https://www.linkedin.com/in/kastro-kiran/" target="_blank">Connect with me</a>
+            <a href="https://www.youtube.com/playlist?list=PLs-PsDpuAuTeNx3OgGQ1QrpNBo-XE6VBh" target="_blank">
+                <img src="https://img.icons8.com/ios-filled/50/1DB954/youtube-play.png" alt="Docker by Kastro"> Docker by Kastro
+            </a>
+            <a href="https://www.youtube.com/watch?v=opJAfDOCZuI" target="_blank">
+                <img src="https://img.icons8.com/ios-filled/50/1DB954/youtube-play.png" alt="Nexus by Kastro"> Nexus by Kastro
+            </a>
+            <a href="https://www.linkedin.com/in/kastro-kiran/" target="_blank">
+                <img src="https://img.icons8.com/ios-filled/50/1DB954/linkedin.png" alt="Connect with me"> Connect with me
+            </a>
         </div>
     </div>
 
