--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -471,6 +471,6 @@
 				</div>
 			</div>
 		</div>
-    <script src="index.js" async></script>
+    <script src="app.js" async></script>
   </body>
 </html>
