--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="app-container">
-        <!-- Hotstar Logo -->
+        <!-- Hotstar Logo at the top center -->
         <img src="https://logowik.com/content/uploads/images/disney-hotstar3268.jpg" alt="Hotstar Logo" class="hotstar-logo">
         
         <!-- Kastro's App Title -->
@@ -19,14 +19,19 @@
         <div class="footer">
             <div class="youtube-links">
                 <a href="https://www.youtube.com/playlist?list=PLs-PsDpuAuTeNx3OgGQ1QrpNBo-XE6VBh" target="_blank" class="youtube-button">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/YouTube_icon_%282013-2017%29.png" alt="YouTube Icon" class="youtube-icon">
                     Docker Course
                 </a>
                 <a href="https://www.youtube.com/watch?v=opJAfDOCZuI" target="_blank" class="youtube-button">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/YouTube_icon_%282013-2017%29.png" alt="YouTube Icon" class="youtube-icon">
                     Nexus in 90 Minutes
                 </a>
             </div>
-            <!-- Personal Logo -->
-            <img src="https://media.licdn.com/dms/image/v2/D5603AQHJB_lF1d9OSw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1718971147172?e=1733961600&v=beta&t=c5vIr7AI17HYzQ150SHGoz2AJ04Sfj_mIA80iZCpJdo" alt="Personal Logo" class="personal-logo">
+
+            <!-- Personal Logo at the bottom center -->
+            <div class="personal-logo-container">
+                <img src="https://media.licdn.com/dms/image/v2/D5603AQHJB_lF1d9OSw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1718971147172?e=1733961600&v=beta&t=c5vIr7AI17HYzQ150SHGoz2AJ04Sfj_mIA80iZCpJdo" alt="Personal Logo" class="personal-logo">
+            </div>
         </div>
     </div>
 
