--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,19 +10,7 @@
 <body>
     <div class="app-container">
         <!-- Welcome Message -->
-        <h1 class="app-title">Welcome to Kastro's App</h1>
-
-        <!-- Buttons with YouTube Icons for Docker and Nexus Courses -->
-        <div class="youtube-links">
-            <a href="https://www.youtube.com/playlist?list=PLs-PsDpuAuTeNx3OgGQ1QrpNBo-XE6VBh" target="_blank" class="youtube-button">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/YouTube_icon_%282013-2017%29.png" alt="YouTube Icon" class="youtube-icon">
-                Click Here for Docker Course
-            </a>
-            <a href="https://www.youtube.com/watch?v=opJAfDOCZuI" target="_blank" class="youtube-button">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/YouTube_icon_%282013-2017%29.png" alt="YouTube Icon" class="youtube-icon">
-                Click Here for Nexus Course
-            </a>
-        </div>
+        <h1 class="app-title">Welcome to sunny App</h1>
 
         <!-- Footer Message -->
         <div class="footer">
